--- a/compton.sample.conf
+++ b/compton.sample.conf
@@ -1,35 +1,35 @@
-# Shadow
-shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
-shadow-radius = 7
-shadow-offset-x = -7
-shadow-offset-y = -7
-# shadow-opacity = 0.7
-# shadow-red = 0.0
-# shadow-green = 0.0
-# shadow-blue = 0.0
-shadow-exclude = [ "n:e:Notification" ];
-# shadow-exclude = "n:e:Notification";
-
-# Opacity
-menu-opacity = 0.8;
-inactive-opacity = 0.8;
-frame-opacity = 0.7;
-inactive-opacity-override = true;
-
-# Fading
-fading = true;
-# fade-delta = 30
-fade-in-step = 0.03
-fade-out-step = 0.03
-
-# Other
-mark-wmwin-focused = true;
-
-# Window type settings
-wintypes:
 {
-  tooltip = { fade = true; shadow = false; opacity = 0.75; };
+  "shadows": true,
+  "no-dnd-shadow": true,
+  "no-dock-shadow": true,
+  "clear-shadow": true,
+  "shadow-radius": 7,
+  "shadow-offset-x": -7,
+  "shadow-offset-y": -7,
+  "#shadow-opacity": 0.7,
+  "#shadow-red": 0.0,
+  "#shadow-green": 0.0,
+  "#shadow-blue": 0.0,
+  "shadow-exclude": [ "n:e:Notification" ],
+  "#shadow-exclude": "n:e:Notification",
+
+  "menu-opacity": 0.8,
+  "inactive-opacity": 0.8,
+  "frame-opacity": 0.7,
+  "inactive-opacity-override": true,
+
+  "fades": true,
+  "#fade-delta": 30,
+  "fade-in-step": 0.03,
+  "fade-out-step": 0.03,
+
+  "mark-wmwin-focused": true,
+
+  "wintypes": {
+    "tooltip": {
+      "fade": true,
+      "shadow": false,
+      "opacity": 0.75
+    }
+  }
 }
