--- a/compton.desktop
+++ b/compton.desktop
@@ -7,5 +7,6 @@ Comment=A X compositor
 Categories=Utility;
 TryExec=compton
 Exec=compton
+NoDisplay=true
 # Icon=xcompmgr
 # Thanks to quequotion for providing this file!
