--- a/compton.sample.conf
+++ b/compton.sample.conf
@@ -28,8 +28,6 @@ inactive-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
 alpha-step = 0.06;
-# inactive-dim = 0.2;
-# inactive-dim-fixed = true;
 # blur-background = true;
 # blur-background-frame = true;
 blur-kern = "3x3box";
@@ -41,6 +39,11 @@ blur-background-exclude = [
 	"_GTK_FRAME_EXTENTS@:c"
 ];
 # opacity-rule = [ "80:class_g = 'URxvt'" ];
+
+# Dimming
+# inactive-dim = 0.2;
+# inactive-dim-fixed = true;
+# dim-rule = [ "50:!(class_g ~= '^(URxvt|mpv|Sxiv)$' || _NET_WM_WINDOW_TYPE@:a *= 'DOCK')" ];
 
 # Fading
 fading = true;
