--- a/compton.sample.conf
+++ b/compton.sample.conf
@@ -29,6 +29,7 @@ frame-opacity = 0.7;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 # inactive-dim = 0.2;
+# inactive-dim-fixed = true;
 # inactive-dim-red = 0.08;
 # inactive-dim-greem = 0.08;
 # inactive-dim-blue = 0.11;
